Refactor: AllowOrigins uri값 Value 처리